Error handling (#17)
* handling errors when building rules

* handling errors when evaluating transactions

Co-authored-by: anttorre <antonio.torre@everis.com>